--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -34,7 +34,7 @@
         app:srcCompat="@drawable/coingecko" />
 
     <Button
-        android:id="@+id/buttonRateApp"
+        android:id="@+id/button_rate_application"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
