--- a/app/src/main/res/layout/fragment_cryptocurrencies.xml
+++ b/app/src/main/res/layout/fragment_cryptocurrencies.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingBottom="16dp"
-    tools:context=".ui.cryptocurrenciescurrencies.CryptocurrenciesFragment">
+    tools:context=".ui.cryptocurrencies.CryptocurrenciesFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
