--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/overviewFragment"
-        android:name="com.example.cryptocurrencies.ui.cryptocurrenciescurrencies.CryptocurrenciesFragment"
+        android:name="com.example.cryptocurrencies.ui.cryptocurrencies.CryptocurrenciesFragment"
         android:label="fragment_overview"
         tools:layout="@layout/fragment_cryptocurrencies" />
 </navigation>
